--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         <button id="closeApp">Закрыть приложение</button>
     </div>
 
-    <script src="app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+    <script src="app.js?v=8"></script>
 </body>
 </html>
